--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "sequelize": "^6.3.5",
+    "simple-git": "^3.17.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
