--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.16",
     "@mui/x-date-pickers": "^6.1.0",
     "@syncfusion/ej2": "^19.4.48",
